@@ -33,21 +33,18 @@ import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 
-import org.hisp.dhis.program.ProgramInstance;
-import org.hisp.dhis.program.ProgramInstanceService;
-import org.hisp.dhis.program.ProgramStageInstance;
-import org.hisp.dhis.program.ProgramStageInstanceService;
+import org.hisp.dhis.program.Enrollment;
+import org.hisp.dhis.program.EnrollmentService;
+import org.hisp.dhis.program.Event;
+import org.hisp.dhis.program.EventService;
 import org.hisp.dhis.relationship.RelationshipService;
-import org.hisp.dhis.trackedentity.TrackedEntityInstance;
-import org.hisp.dhis.trackedentity.TrackedEntityInstanceService;
+import org.hisp.dhis.trackedentity.TrackedEntity;
+import org.hisp.dhis.trackedentity.TrackedEntityService;
 import org.hisp.dhis.tracker.imports.TrackerType;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.imports.converter.EnrollmentTrackerConverterService;
 import org.hisp.dhis.tracker.imports.converter.EventTrackerConverterService;
-import org.hisp.dhis.tracker.imports.domain.Enrollment;
-import org.hisp.dhis.tracker.imports.domain.Event;
 import org.hisp.dhis.tracker.imports.domain.Relationship;
-import org.hisp.dhis.tracker.imports.domain.TrackedEntity;
 import org.hisp.dhis.tracker.imports.report.Entity;
 import org.hisp.dhis.tracker.imports.report.TrackerTypeReport;
 import org.springframework.stereotype.Service;
@@ -62,11 +59,11 @@ import com.google.common.collect.Lists;
 public class DefaultTrackerObjectsDeletionService
     implements TrackerObjectDeletionService
 {
-    private final ProgramInstanceService programInstanceService;
+    private final EnrollmentService enrollmentService;
 
-    private final TrackedEntityInstanceService teiService;
+    private final TrackedEntityService teiService;
 
-    private final ProgramStageInstanceService programStageInstanceService;
+    private final EventService eventService;
 
     private final RelationshipService relationshipService;
 
@@ -79,7 +76,7 @@ public class DefaultTrackerObjectsDeletionService
     {
         TrackerTypeReport typeReport = new TrackerTypeReport( TrackerType.ENROLLMENT );
 
-        List<Enrollment> enrollments = bundle.getEnrollments();
+        List<org.hisp.dhis.tracker.imports.domain.Enrollment> enrollments = bundle.getEnrollments();
 
         for ( int idx = 0; idx < enrollments.size(); idx++ )
         {
@@ -87,11 +84,11 @@ public class DefaultTrackerObjectsDeletionService
 
             Entity objectReport = new Entity( TrackerType.ENROLLMENT, uid, idx );
 
-            ProgramInstance programInstance = programInstanceService.getProgramInstance( uid );
+            Enrollment enrollment = enrollmentService.getEnrollment( uid );
 
-            List<Event> events = eventTrackerConverterService
-                .to( Lists.newArrayList( programInstance.getProgramStageInstances()
-                    .stream().filter( psi -> !psi.isDeleted() )
+            List<org.hisp.dhis.tracker.imports.domain.Event> events = eventTrackerConverterService
+                .to( Lists.newArrayList( enrollment.getEvents()
+                    .stream().filter( event -> !event.isDeleted() )
                     .collect( Collectors.toList() ) ) );
 
             TrackerBundle trackerBundle = TrackerBundle.builder().events( events ).user( bundle.getUser() )
@@ -99,11 +96,11 @@ public class DefaultTrackerObjectsDeletionService
 
             deleteEvents( trackerBundle );
 
-            TrackedEntityInstance tei = programInstance.getEntityInstance();
-            tei.getProgramInstances().remove( programInstance );
+            TrackedEntity tei = enrollment.getTrackedEntity();
+            tei.getEnrollments().remove( enrollment );
 
-            programInstanceService.deleteProgramInstance( programInstance );
-            teiService.updateTrackedEntityInstance( tei );
+            enrollmentService.deleteEnrollment( enrollment );
+            teiService.updateTrackedEntity( tei );
 
             typeReport.getStats().incDeleted();
             typeReport.addEntity( objectReport );
@@ -117,7 +114,7 @@ public class DefaultTrackerObjectsDeletionService
     {
         TrackerTypeReport typeReport = new TrackerTypeReport( TrackerType.EVENT );
 
-        List<Event> events = bundle.getEvents();
+        List<org.hisp.dhis.tracker.imports.domain.Event> events = bundle.getEvents();
 
         for ( int idx = 0; idx < events.size(); idx++ )
         {
@@ -125,18 +122,18 @@ public class DefaultTrackerObjectsDeletionService
 
             Entity objectReport = new Entity( TrackerType.EVENT, uid, idx );
 
-            ProgramStageInstance programStageInstance = programStageInstanceService.getProgramStageInstance( uid );
+            Event event = eventService.getEvent( uid );
 
-            ProgramInstance programInstance = programStageInstance.getProgramInstance();
+            Enrollment enrollment = event.getEnrollment();
 
-            programStageInstanceService.deleteProgramStageInstance( programStageInstance );
+            eventService.deleteEvent( event );
 
-            if ( programStageInstance.getProgramStage().getProgram().isRegistration() )
+            if ( event.getProgramStage().getProgram().isRegistration() )
             {
-                teiService.updateTrackedEntityInstance( programStageInstance.getProgramInstance().getEntityInstance() );
+                teiService.updateTrackedEntity( event.getEnrollment().getTrackedEntity() );
 
-                programInstance.getProgramStageInstances().remove( programStageInstance );
-                programInstanceService.updateProgramInstance( programInstance );
+                enrollment.getEvents().remove( event );
+                enrollmentService.updateEnrollment( enrollment );
             }
 
             typeReport.getStats().incDeleted();
@@ -147,11 +144,11 @@ public class DefaultTrackerObjectsDeletionService
     }
 
     @Override
-    public TrackerTypeReport deleteTrackedEntityInstances( TrackerBundle bundle )
+    public TrackerTypeReport deleteTrackedEntity( TrackerBundle bundle )
     {
         TrackerTypeReport typeReport = new TrackerTypeReport( TrackerType.TRACKED_ENTITY );
 
-        List<TrackedEntity> trackedEntities = bundle.getTrackedEntities();
+        List<org.hisp.dhis.tracker.imports.domain.TrackedEntity> trackedEntities = bundle.getTrackedEntities();
 
         for ( int idx = 0; idx < trackedEntities.size(); idx++ )
         {
@@ -159,15 +156,15 @@ public class DefaultTrackerObjectsDeletionService
 
             Entity objectReport = new Entity( TrackerType.TRACKED_ENTITY, uid, idx );
 
-            org.hisp.dhis.trackedentity.TrackedEntityInstance daoEntityInstance = teiService
-                .getTrackedEntityInstance( uid );
+            TrackedEntity daoEntityInstance = teiService
+                .getTrackedEntity( uid );
 
-            Set<ProgramInstance> programInstances = daoEntityInstance.getProgramInstances();
+            Set<Enrollment> daoEnrollments = daoEntityInstance.getEnrollments();
 
-            List<Enrollment> enrollments = enrollmentTrackerConverterService
-                .to( Lists.newArrayList( programInstances.stream()
-                    .filter( pi -> !pi.isDeleted() )
-                    .collect( Collectors.toList() ) ) );
+            List<org.hisp.dhis.tracker.imports.domain.Enrollment> enrollments = enrollmentTrackerConverterService
+                .to( Lists.newArrayList( daoEnrollments.stream()
+                    .filter( enrollment -> !enrollment.isDeleted() )
+                    .toList() ) );
 
             TrackerBundle trackerBundle = TrackerBundle.builder().enrollments( enrollments )
                 .user( bundle.getUser() )
@@ -175,7 +172,7 @@ public class DefaultTrackerObjectsDeletionService
 
             deleteEnrollments( trackerBundle );
 
-            teiService.deleteTrackedEntityInstance( daoEntityInstance );
+            teiService.deleteTrackedEntity( daoEntityInstance );
 
             typeReport.getStats().incDeleted();
             typeReport.addEntity( objectReport );
@@ -185,7 +182,7 @@ public class DefaultTrackerObjectsDeletionService
     }
 
     @Override
-    public TrackerTypeReport deleteRelationShips( TrackerBundle bundle )
+    public TrackerTypeReport deleteRelationships( TrackerBundle bundle )
     {
         TrackerTypeReport typeReport = new TrackerTypeReport( TrackerType.RELATIONSHIP );
 
